# DGM-MCP

./: .env.example  .gitignore  ARCHITECTURE_MAP.md  CERTIFICATION_CLAUDE_DESKTOP.md  CERTIFICATION_CURSOR.md  CERTIFICATION_MCP_INSPECTOR.md  CERTIFICATION_SUMMARY.md  CERTIFICATION_WINDSURF.md  CHANGELOG.md  CLAUDE_DESKTOP_VALIDATION.md  CONTRIBUTING.md  CURSOR_VALIDATION.md  DGM-MCP_ANALYSIS_2025-06-14.md  DGM-MCP_CONTEXT.md  DGM-MCP_TREE.txt  FINAL_RELEASE_AUDIT.md  FINAL_RELEASE_AUDIT_V2.md  INSPECTOR_RESULTS.md  INTEROPERABILITY_CERTIFICATION_REPORT.md  INTEROPERABILITY_MATRIX.md  LEGACY_BRIDGE_DECISION.md  LICENSE  LIVE_VALIDATION_REPORT.md  MCP_COMPLIANCE_REPORT.md  MCP_FINAL_GAP_REPORT.md  MCP_GAP_ANALYSIS.md  MCP_IMPLEMENTATION_ROADMAP.md  MCP_INSPECTOR_VALIDATION.md  MCP_PROTOCOL_DESIGN.md  MCP_TOOL_SCHEMAS.md  PERFORMANCE_REPORT.md  README.md  RELEASE_AUDIT.md  RELEASE_BLOCKERS.md  RELEASE_CANDIDATE_REPORT.md  RELEASE_NOTES.md  RELEASE_READINESS_AUDIT.md  RELEASE_READINESS_REPORT.md  RELEASE_VERIFICATION.md  SECURITY.md  (+6 more)
VALIDATIONS/: CLAUDE_DESKTOP.md  CURSOR.md  MCP_INSPECTOR.md  WINDSURF.md
certification/: CLAUDE_DESKTOP_TEMPLATE.md  CURSOR_TEMPLATE.md  INSPECTOR_TEMPLATE.md  WINDSURF_TEMPLATE.md  certify_claude.py  certify_ide_clients.py  certify_inspector.py
config/: config.yaml
examples/: workflow_exemplo.md
scripts/: certify_claude.py  certify_ide_clients.py  certify_inspector.py  init.py  validate_mcp_client.py
tests/: test_agent.py  test_audit_logger.py  test_basic.py  test_e2e_http.py  test_e2e_stdio.py  test_git_tool.py  test_llm.py  (+16 more)
(+42 files in other folders)
